# swagger_server/models/db/auditing.py
@@ -11,22 +11,30 @@ from sqlalchemy import (
 from swagger_server.models.db import Base
 
 
-class TaskTechnical(Base):
-    __tablename__ = "task_technical"
+class Auditing(Base):
+    __tablename__ = "auditing"
     __table_args__ = {"schema": "technical"}
 
-    id_task = Column(
+    id_auditing = Column(
         Integer,
-        Sequence("task_technical_id_seq", schema="technical"),
+        Sequence("auditing_id_seq", schema="technical"),
         primary_key=True,
         nullable=False
     )
 
-    name = Column(Text)
-    description = Column(Text)
-    code = Column(Text)
+    task_id = Column(
+        Integer,
+        ForeignKey("technical.task_technical.id_task")
+    )
+
+    location_id = Column(
+        Integer,
+        ForeignKey("technical.clients_location.id_location")
+    )
+
+    responsible = Column(Text)
+    percentage_compliance = Column(Text)
     status = Column(Text)
-    
 
     created_by = Column(Text)
     updated_by = Column(Text)
