# swagger_server/models/db/technical_record.py
@@ -11,22 +11,33 @@ from sqlalchemy import (
 from swagger_server.models.db import Base
 
 
-class TaskTechnical(Base):
-    __tablename__ = "task_technical"
+class TechnicalRecord(Base):
+    __tablename__ = "technical_record"
     __table_args__ = {"schema": "technical"}
 
-    id_task = Column(
+    id_record = Column(
         Integer,
-        Sequence("task_technical_id_seq", schema="technical"),
+        Sequence("technical_record_id_seq", schema="technical"),
         primary_key=True,
         nullable=False
     )
 
-    name = Column(Text)
-    description = Column(Text)
-    code = Column(Text)
-    status = Column(Text)
-    
+    task_id = Column(
+        Integer,
+        ForeignKey("technical.task_technical.id_task")
+    )
+
+    client_id = Column(
+        Integer,
+        ForeignKey("technical.clients.id_client")
+    )
+
+    location_id = Column(
+        Integer,
+        ForeignKey("technical.clients_location.id_location")
+    )
+
+    resume = Column(Text)
 
     created_by = Column(Text)
     updated_by = Column(Text)
