# swagger_server/models/materials_data.py
@@ -1,0 +1,88 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class MaterialsData(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, quantity: int=None, material: str=None):  # noqa: E501
+        """MaterialsData - a model defined in Swagger
+
+        :param quantity: The quantity of this MaterialsData.  # noqa: E501
+        :type quantity: int
+        :param material: The material of this MaterialsData.  # noqa: E501
+        :type material: str
+        """
+        self.swagger_types = {
+            'quantity': int,
+            'material': str
+        }
+
+        self.attribute_map = {
+            'quantity': 'quantity',
+            'material': 'material'
+        }
+        self._quantity = quantity
+        self._material = material
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'MaterialsData':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The MaterialsData of this MaterialsData.  # noqa: E501
+        :rtype: MaterialsData
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def quantity(self) -> int:
+        """Gets the quantity of this MaterialsData.
+
+
+        :return: The quantity of this MaterialsData.
+        :rtype: int
+        """
+        return self._quantity
+
+    @quantity.setter
+    def quantity(self, quantity: int):
+        """Sets the quantity of this MaterialsData.
+
+
+        :param quantity: The quantity of this MaterialsData.
+        :type quantity: int
+        """
+
+        self._quantity = quantity
+
+    @property
+    def material(self) -> str:
+        """Gets the material of this MaterialsData.
+
+
+        :return: The material of this MaterialsData.
+        :rtype: str
+        """
+        return self._material
+
+    @material.setter
+    def material(self, material: str):
+        """Sets the material of this MaterialsData.
+
+
+        :param material: The material of this MaterialsData.
+        :type material: str
+        """
+
+        self._material = material
